--- a/templates/exportcolumn.html
+++ b/templates/exportcolumn.html
@@ -1,3 +1,11 @@
 <a id="exportmarkdowna" target="_blank" class="exportlink">
-  <div class="exporttype" id="exportmarkdown">Markdown</div>
+<div class="exporttype" id="exportmarkdown">Markdown</div>
 </a>
+<style>
+#exportmarkdowna:before {
+  content: "\e805";
+}
+#exportmarkdown{
+  margin-left:-4px;
+}
+</style>
