--- a/templates/scripts.html
+++ b/templates/scripts.html
@@ -1,1 +1,1 @@
-<script src="/static/plugins/ep_markdown/static/js/main.js"></script>
+<script src="../static/plugins/ep_markdown/static/js/main.js"></script>
