--- a/templates/markdown_entry.ejs
+++ b/templates/markdown_entry.ejs
@@ -1,4 +1,4 @@
 <p>
-  <input type="checkbox" id="options-markdown" <%= checked %>></input> 
-  <label for="options-markdown">Show markdown</label>
+  <input type="checkbox" id="options-markdown" <%= checked %>></input>
+  <label data-l10n-id="ep_markdown.options" for="options-markdown"></label>
 </p>
