--- a/templates/markdown_entry.ejs
+++ b/templates/markdown_entry.ejs
@@ -1,4 +1,4 @@
 <p>
   <input type="checkbox" id="options-markdown" <%= checked %>></input> 
-  <label for="options-markdown">Show markdown</label>
+  <label for="options-markdown" data-l10n-id="ep_markdown.showMarkdown">Show markdown</label>
 </p>
