fix for menu item

--- a/templates/exportcolumn.html
+++ b/templates/exportcolumn.html
@@ -1,11 +1,8 @@
 <a id="exportmarkdowna" target="_blank" class="exportlink">
-  <div class="exporttype" id="exportmarkdown">Markdown</div>
+  <span class="exporttype buttonicon buttonicon-file-code" id="exportmarkdown">Markdown</span>
 </a>
 <style>
-#exportmarkdowna:before {
+#exportmarkdown:before {
   content: "\e805";
-}
-#exportmarkdown{
-  margin-left:1px;
 }
 </style>
